--- a/20240918/進捗報告.md
+++ b/20240918/進捗報告.md
@@ -5,12 +5,17 @@
 - 前回抱えていた課題の具体化
 ### 前回自分が抱えていると認識しているタスク
 - 脆弱性についてのPoCを完成させること
-  -> 現在は複数のPoCについて意味を調べている。
+
+  -> 現在は複数のPoCについて意味を調べているが、どれも多くのアドレスの値を取り扱うもので難航中。
   - FortiGateのあるアドレスに格納された値を扱っている部分については調べられていない。
 - STARDUSTについて触ってみて理解を深めること
-  -> 先週月曜日にSTARDUSTの講習に参加。概要は掴めたが再現できるほどではない。
+  
+  -> 先週月曜日にSTARDUSTの講習に参加。概要は掴めたが再現できるほどではない。機能自体はそこそこ理解したので考察中...
   - 実際にマルウェアを扱った触りは講習のアーカイブ公開後に行いたい...
 ### 実は抱えていたタスク
-- スライドのあいまいな部分の詰め
+- スライドに記載していた曖昧な部分の具体化
   - STARDUSTの中身についてどのようにすれば企業っぽく見せられそうか...
-  - STARDUSTに対するVPN接続について...
+    -> 講習会で行われていた方法としては、STARDUST上でWindowsに複数のアカウントを作成し、複数の人間がパソコンに関与しているように見せかける
+  - STARDUSTから出ていく通信について
+    - 論文ではワームホールを用いて悪意のある通信をシャットアウトする
+      -> 現時点でそれが可能であるかは不明。ダミーサーバに送るのも1つの手
