--- a/20240925/進捗報告.md
+++ b/20240925/進捗報告.md
@@ -14,7 +14,7 @@
   - VPNが踏み台とされることはあってはならないので、ひとまずダミーサーバに送る。そのうちワームホール前後で落とされた通信を確認することで、性能の検証を行いたい。
 - 実験を行う際の構築
   - ワームホールが信頼できないため、今回はダミーサーバを使用-> 溝口さんが以前使用したような構造になりそうだと予想。以下のような構造になる
-![](SDdummyver.png)
+![](SDdummy.png)
 - FortiGateに送られてはいけない通信の調査
   - 現状考えているのがアップデート
     - FortiGateのアップデートは、商品を買った時にもらえる証明書に記載されているパスワードが必要->西舘さんに伺ったところ、無いそう。
