--- a/20240925/進捗報告.md
+++ b/20240925/進捗報告.md
@@ -25,6 +25,6 @@
     - 証書が無い以上、おそらく攻撃者もアップデートできないとは思うが、一応落としたい。
     - それ以外についてもこれから調査を行いたい。
 
-### 次回の方針
+### 次回以降の課題
 今まで脆弱性のPoCについて調査を行っていたが、全く進められていない -> PoC公開者が前提としている知識を持ち合わせていない。
 - 脆弱性のあるVPNとして使用しようと考えているFortiGateについて、機能を調査し、PoCのコード,STARDUST含めもっと勉強をすることを方針としたい
